--- a/job_vars/cinder-iscsi.yaml
+++ b/job_vars/cinder-iscsi.yaml
@@ -1,7 +1,7 @@
 vms:
   - devstack: 
     name: "dv-cinder-{{ zuul_change }}-{{ zuul_patchset }}-{{ job_type }}"
-    image: ubuntu1604
+    image: bionic-09.08.2019
     flavor: devstack
     inventory_group: devstack
     additional_params: 'ansible_ssh_private_key_file=/home/jenkins-slave/.ssh/id_rsa.pem ansible_ssh_common_args="-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"'
@@ -107,12 +107,14 @@ local_conf:
   q_ml2_tenant_network_type: vxlan
   image_urls: "{{ image_urls }}"
   append: |
+    Q_ML2_PLUGIN_MECHANISM_DRIVERS=openvswitch
     TEMPEST_PLUGINS=/opt/stack/cinder-tempest-plugin
     LIBS_FROM_GIT=cinder-tempest-plugin
     ATTACH_ENCRYPTED_VOLUME_AVAILABLE=False
     SWIFT_REPLICAS=1
     SWIFT_HASH=66a3d6b56c1f479c8b4e70ab5d2014f6
     SWIFT_START_ALL_SERVICES=False
+    USE_PYTHON3=True
 
     [[post-config|$NOVA_CONF]]
     [DEFAULT]
