Make sure /opt/stack exists before using it

--- a/tasks/devstack/install-zuul.yaml
+++ b/tasks/devstack/install-zuul.yaml
@@ -1,3 +1,13 @@
+  - name: Make sure ubuntu user has access to /opt/stack
+    file:
+      path: /opt/stack
+      state: directory
+      recurse: yes
+      owner: ubuntu
+      group: ubuntu
+      mode: '0755'
+    become: True
+
 - name: Install zuul venv package
   unarchive:
     src: "{{ zuul_venv_pkg }}"
