Add missing tags and correct allignment

--- a/tasks/devstack/install-zuul.yaml
+++ b/tasks/devstack/install-zuul.yaml
@@ -1,12 +1,13 @@
-  - name: Make sure ubuntu user has access to /opt/stack
-    file:
-      path: /opt/stack
-      state: directory
-      recurse: yes
-      owner: ubuntu
-      group: ubuntu
-      mode: '0755'
-    become: True
+- name: Make sure ubuntu user has access to /opt/stack
+  file:
+    path: /opt/stack
+    state: directory
+    recurse: yes
+    owner: ubuntu
+    group: ubuntu
+    mode: '0755'
+  become: True
+  tags: install-zuul
 
 - name: Install zuul venv package
   unarchive:
