--- a/job_vars/nova.yaml
+++ b/job_vars/nova.yaml
@@ -266,7 +266,8 @@ post_stack_bash: |
     iniset $TEMPEST_CONFIG compute-feature-enabled block_migration_for_live_migration True
     iniset $TEMPEST_CONFIG compute-feature-enabled live_migration True
     iniset $TEMPEST_CONFIG compute-feature-enabled interface_attach False
-
+    iniset $TEMPEST_CONFIG compute-feature-enabled stable_rescue False
+    
     iniset $TEMPEST_CONFIG scenario img_dir "/home/ubuntu/devstack/files/"
     iniset $TEMPEST_CONFIG scenario img_file "{{ local_conf.image_urls | basename }}"
     iniset $TEMPEST_CONFIG scenario img_disk_format vhdx
