--- a/job_vars/cinder-smb.yaml
+++ b/job_vars/cinder-smb.yaml
@@ -300,15 +300,15 @@ win_cherry_picks:
   - project: openstack/neutron
     path: "{{ win_dir.build }}\\neutron"
     patches:
-      - refs/changes/21/567621/13
-  - project: openstack/cinder
-    path: "{{ win_dir.build }}\\cinder"
-    patches:
-      - refs/changes/68/630168/1
-  - project: openstack/compute-hyperv
-    path: "{{ win_dir.build }}\\compute-hyperv"
-    patches:
-      - refs/changes/60/702660/2
+      - refs/changes/59/763159/1
+  # - project: openstack/cinder
+    # path: "{{ win_dir.build }}\\cinder"
+    # patches:
+      # - refs/changes/68/630168/1
+  # - project: openstack/compute-hyperv
+    # path: "{{ win_dir.build }}\\compute-hyperv"
+    # patches:
+      # - refs/changes/60/702660/2
 
 compute_driver: compute_hyperv.driver.HyperVDriver
 data_bridge_ovs: br-ethernet
