Workaround for live migration vif timeout

--- a/templates/windows/nova.conf
+++ b/templates/windows/nova.conf
@@ -30,6 +30,12 @@ notify_on_state_change = vm_and_task_state
 network_api_class = nova.network.neutronv2.api.API
 security_group_api = neutron
 
+# Note(slupsa): workaround event not being received on stable/train
+{% if zuul_branch == "stable/train" %}
+[compute]
+live_migration_wait_for_vif_plug=false
+{% endif %}
+
 [hyperv]
 vswitch_name = {{ data_bridge }}
 limit_cpu_features = True
