--- a/job_vars/nova.yaml
+++ b/job_vars/nova.yaml
@@ -1,7 +1,7 @@
 vms:
   - devstack: 
     name: "n-d-{{ zuul_change }}-{{ zuul_patchset }}"
-    image: bionic-09.08.2019
+    image: focal-15.04.2021
     flavor: devstack
     inventory_group: devstack
     additional_params: 'ansible_ssh_private_key_file=/home/jenkins-slave/.ssh/id_rsa.pem ansible_ssh_common_args="-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"'
