--- a/job_vars/nova.yaml
+++ b/job_vars/nova.yaml
@@ -39,6 +39,11 @@ log_path: /tmp/build_logs/{{ zuul_change }}-{{ zuul_patchset }}/{{ job_type }}
 
 ## devstack
 cherry_picks:
+  - project: openstack/devstack
+    path: "{{ devstack_dir.devstack }}"
+    url: "https://github.com/cloudbase/devstack"
+    patches:
+      - refs/heads/neutron-ovs-bridge-arping
   - project: openstack/tempest
     path: "{{ devstack_dir.stack }}/tempest"
     patches:
