--- a/job_vars/nova-ceph.yaml
+++ b/job_vars/nova-ceph.yaml
@@ -37,6 +37,12 @@ upper_constraints_pinning:
   - simplejson:
     project: 'simplejson'
     value: 'simplejson===3.16.0'
+  - pyasn1:
+    project: 'pyasn1'
+    value: 'pyasn1===0.4.8'
+  - pyasn1-modules:
+    project: 'pyasn1-modules'
+    value: 'pyasn1-modules===0.2.8'
 
 local_conf:
   enable_services:
