Default ml2 moved to ovn in Devstack. Keep ovs.

--- a/templates/devstack/local.conf
+++ b/templates/devstack/local.conf
@@ -16,6 +16,7 @@ disable_service {{ service }}
 IP_VERSION={{ local_conf.ip_version }}
 
 Q_PLUGIN=ml2
+Q_AGENT=openvswitch
 PHYSICAL_NETWORK=physnet1
 {% if network_type == "hyperv" %}
   Q_ML2_PLUGIN_MECHANISM_DRIVERS=openvswitch,hyperv
